# captn-backend

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  application.py  docker-compose.yaml  email-template.html  fastapi_requirements.txt  pyproject.toml  quickstart.py  schema.prisma  uvicorn-log-config.json  websurfer-groupchat.ipynb  websurfer-issue.ipynb  ws_application.py
.devcontainer/: devcontainer.env  devcontainer.json  setup.sh
.github/workflows/: check_certs_expiry.yml  docker_cleanup.yml  enforcer.yaml  pipeline.yml  test.yml  update_cron_script.yml
benchmarking/: brief-creation-benchmark-task-list-2024-05-05T14:05:39-aggregated.csv  brief-creation-benchmark-task-list-2024-05-05T14:05:39.csv  campaign-creation-benchmark-task-list-2024-05-20T15:53:22-aggregated.csv  campaign-creation-benchmark-task-list-2024-05-20T15:53:22.csv  campaign-creation-benchmark-task-list-2024-05-28T16:54:54-aggregated.csv  campaign-creation-benchmark-task-list-2024-05-28T16:54:54.csv  end2end-benchmark-task-list-2024-05-20T23:25:19-aggregated.csv  end2end-benchmark-task-list-2024-05-20T23:25:19.csv  end2end-benchmark-task-list-2024-05-28T17:37:20-aggregated.csv  end2end-benchmark-task-list-2024-05-28T17:37:20.csv  end2end-benchmark-task-list-2024-06-04T20:57:23-aggregated.csv  end2end-benchmark-task-list-2024-06-04T20:57:23.csv  end2end-benchmark-task-list-aggregated.csv  end2end-benchmark-task-list.csv  get_info_from_the_web_page_2024-04-28T11:11:02.csv  get_info_from_the_web_page_aggregated_2024-04-28T11:11:02.csv  websurfer-benchmark-task-list-2024-05-01T00:01:52-aggregated.csv  websurfer-benchmark-task-list-2024-05-01T00:01:52.csv  websurfer-benchmark-task-list-2024-05-02T17:25:09-aggregated.csv  websurfer-benchmark-task-list-2024-05-02T17:25:09.csv  websurfer-benchmark-task-list-2024-05-14T23:12:21-aggregated.csv  websurfer-benchmark-task-list-2024-05-14T23:12:21.csv  websurfer-benchmark-task-list-2024-06-04T14:13:35-aggregated.csv  websurfer-benchmark-task-list-2024-06-04T14:13:35.csv  weekly-analysis-benchmark-task-list-aggregated.csv  weekly-analysis-benchmark-task-list.csv
captn/: __about__.py  __init__.py  model.py
captn/captn_agents/: __init__.py  application.py  db_queries.py  helpers.py  model.py
captn/captn_agents/backend/: __init__.py  banking_initial_team.py  banking_team.py  campaign_creation_team.py  campaign_creation_team_tools.py  captn_initial_team.py  config.py  create_dummy_team.py  daily_analysis_team.py  end_to_end.py  execution_team.py  function_configs.py  functions.py  google_ads_mock.py  google_ads_team.py  initial_team.py  planning_team.py  team.py  teams_manager.py
captn/email/: __init__.py  send_email.py
captn/google_ads/: __init__.py  client.py
captn/observability/: __init__.py  fastapi_utils.py  utils.py  websocket_utils.py
captn_agent/: application.py
captn_agents/: __init__.py  application.py  end_to_end.py  function_configs.py  google_ads_mock.py  google_ads_team.py  initial_team.py
captn_agents/captn_agents/: banking_initial_team.py  banking_team.py  captn_initial_team.py  config.py  end_to_end.py  execution_team.py  function_configs.py  functions.py  google_ads_team.py  initial_team.py  planning_team.py  team.py
etc/: grafana.ini
etc/dashboards/: custom-observability.json  fastapi-observability.json
etc/grafana/: datasource.yml
etc/prometheus/: prometheus.yml
google_ads/: __init__.py  application.py  language_codes.csv  model.py
google_ads_auth_service/: __init__.py  application.py
migrations/20231109102807_add_model/: migration.sql
migrations/20231207092441_add_tasks_table/: migration.sql
migrations/20231207095906_rename_tasks_table_to_task/: migration.sql
migrations/20231208054035_remove_call_counter_column/: migration.sql
migrations/20240702072033_add_initial_team_table/: migration.sql
migrations/20240702072156_add_user_initial_team_table/: migration.sql
migrations/20240702072256_add_initial_team_row/: migration.sql
migrations/20240703075830_add_initial_team_and_user_initial_team_tables/: migration.sql
migrations/20240703075850_add_initial_team_row/: migration.sql
migrations/20240703122847_define_elation_field_for_user_initial_team/: migration.sql
migrations/20240909212345_sync_page_feed_smart_suggestion/: migration.sql
openai_agent/: application.py  connection_manager.py  main.py  model.py  openai.py  send_email.py  smart_suggestion_generator.py  utils.py  websocket.py
scripts/: benchmark-brief-creation.sh  benchmark-websurfer.sh  benchmark.sh  cron_check_certs.sh  deploy.sh  end2end_benchmark.sh  get_info_from_web_page_benchmark.sh  lint.sh  prisma_generate_client.sh  run_docker_compose.sh  start_webservice.sh  static-analysis.sh  test.sh
templates/email/: campaign_warning_template.html  campaign_warning_template.txt  campaigns_template.html  customer_report_template.html  customer_report_template.txt  main_email_template.html  main_email_template.txt  proposed_action.html  sample-email-template.html  sample-email.html
tests/benchmark/: get_info_from_the_web_page.py
tests/captn_agents/: test_async_captn.py  test_banking_end_to_end.py  test_banking_team.py  test_cache.py  test_captn_end_to_end.py  test_client.py  test_create_dummy_team.py  test_daily_analysis_team.py  test_end_to_end.py  test_execution_team.py  test_failure.py  test_google_ads_team.py  test_initial_conversation.py  test_openai_agent.py  test_planning_team.py  test_send_email.py  test_team.py  test_teams_manager.py  utils.py
tests/ci/: conftest.py  helpers.py  test_brief_creation_team.py  test_brief_creation_team_tools.py  test_campaign_creation_team.py  test_campaign_creation_team_tools.py  test_captn_agents_application.py  test_client.py  test_config.py  test_conftest.py  test_daily_analysis_team.py  test_end2end.py  test_google_ads_application.py  test_google_ads_client.py  test_google_ads_helpers.py  test_google_ads_team.py  test_openai_agent.py  test_openai_agent_application.py  test_send_email.py  test_smart_suggestion_generator.py  test_team.py
tests/ci/fixtures/: daily_reports.txt  (+1 more)
(+90 files in other folders)
